обновлён конфиг gradle