@@ -25,28 +25,54 @@ repositories {
 }
 
 dependencies {
-	// Web MVC
+	// Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// WebClient
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// Jackson
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
 	// OpenAPI
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
+
+	// Resilience4j
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.3.0'
+
+	// Commons
 	implementation 'org.apache.commons:commons-lang3:3.18.0'
+
+	// MapStruct
+	implementation 'org.mapstruct:mapstruct:1.6.3'
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
+
+	// Annotation Processors
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 
 	// Тестирование
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'io.projectreactor:reactor-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+compileJava {
+	options.compilerArgs = [
+			'-Amapstruct.defaultComponentModel=spring',
+			'-Amapstruct.unmappedTargetPolicy=WARN'
+	]
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
